@@ -4,6 +4,12 @@ Verbatim copying and distribution of this entire article is permitted in any
 medium, provided this notice is preserved.
 
 
+Changes between GMP version 6.0.* and 6.1.0
+
+  FEATURES
+  * New C++ functions gcd and lcm for mpz_class.
+
+
 Changes between GMP version 5.1.* and 6.0.0
 
   BUGS FIXED
